--- a/client.htm
+++ b/client.htm
@@ -280,16 +280,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-9-26-node-share.htm" title="顶级代理服务器 - 9月26日18.7M/S|免费Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/SSR节点订阅机场推荐">顶级代理服务器 - 9月26日18.7M/S|免费Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/SSR节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-16-free-subscribe-node.htm" title="顶级代理服务器 - 10月16日20.3M/S|免费SSR节点/V2ray节点/Clash节点/Shadowrocket节点/Singbox节点订阅机场推荐">顶级代理服务器 - 10月16日20.3M/S|免费SSR节点/V2ray节点/Clash节点/Shadowrocket节点/Singbox节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-154045.htm" title="深度剖析v2rayng：从入门到精通的代理配置与安全共享全攻略">深度剖析v2rayng：从入门到精通的代理配置与安全共享全攻略</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-4-vless-node.htm" title="顶级代理服务器 - 10月4日19.9M/S|免费V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Singbox节点订阅机场推荐">顶级代理服务器 - 10月4日19.9M/S|免费V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Singbox节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-3-free-subscribe-node.htm" title="顶级代理服务器 - 10月3日19.9M/S|免费SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 10月3日19.9M/S|免费SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-19-free-subscribe-node.htm" title="顶级代理服务器 - 9月19日18.1M/S|免费Clash节点/SSR/Shadowrocket节点/V2ray订阅机场推荐">顶级代理服务器 - 9月19日18.1M/S|免费Clash节点/SSR/Shadowrocket节点/V2ray订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-2-today-vless-node.htm" title="顶级代理服务器 - 10月2日21M/S|免费V2ray节点/SSR节点/Clash节点/Shadowrocket节点/Singbox节点订阅机场推荐">顶级代理服务器 - 10月2日21M/S|免费V2ray节点/SSR节点/Clash节点/Shadowrocket节点/Singbox节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-26-node-share.htm" title="顶级代理服务器 - 9月26日18.7M/S|免费Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/SSR节点订阅机场推荐">顶级代理服务器 - 9月26日18.7M/S|免费Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/SSR节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-153703.htm" title="手机Clash免费节点获取与高效使用全攻略：解锁全球网络自由">手机Clash免费节点获取与高效使用全攻略：解锁全球网络自由</a></li>
+                        <li class="py-2"><a href="/news/article-153329.htm" title="突破网络边界：贴吧自由访问的全方位科学上网指南">突破网络边界：贴吧自由访问的全方位科学上网指南</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-13-vless-node.htm" title="顶级代理服务器 - 10月13日21.6M/S|免费V2ray节点/SSR节点/Clash节点/Singbox节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 10月13日21.6M/S|免费V2ray节点/SSR节点/Clash节点/Singbox节点/Shadowrocket节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-23-vless-node-share.htm" title="顶级代理服务器 - 9月23日22.7M/S|免费Shadowrocket节点/SSR/V2ray节点/Clash订阅机场推荐">顶级代理服务器 - 9月23日22.7M/S|免费Shadowrocket节点/SSR/V2ray节点/Clash订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-21-vless-github.htm" title="顶级代理服务器 - 9月21日23M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray订阅机场推荐">顶级代理服务器 - 9月21日23M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-154417.htm" title="安卓V2Ray详细配置指南：开启自由网络之旅">安卓V2Ray详细配置指南：开启自由网络之旅</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-25-vless-node-github.htm" title="顶级代理服务器 - 9月25日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐">顶级代理服务器 - 9月25日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-23-node-share.htm" title="顶级代理服务器 - 10月23日21.4M/S|免费SSR节点/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 10月23日21.4M/S|免费SSR节点/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-18-vless-node.htm" title="顶级代理服务器 - 9月18日20.1M/S|免费Clash节点/SSR/V2ray节点/Shadowrocket订阅机场推荐">顶级代理服务器 - 9月18日20.1M/S|免费Clash节点/SSR/V2ray节点/Shadowrocket订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-17-today-vless-node.htm" title="顶级代理服务器 - 9月17日20.6M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray订阅机场推荐">顶级代理服务器 - 9月17日20.6M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray订阅机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -301,7 +301,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
