--- a/date/2025-09/index.htm
+++ b/date/2025-09/index.htm
@@ -265,16 +265,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-9-13-node-share-links.htm" title="顶级代理服务器 - 9月13日20.8M/S|免费SSR/Shadowrocket节点/Clash节点/V2ray订阅机场推荐">顶级代理服务器 - 9月13日20.8M/S|免费SSR/Shadowrocket节点/Clash节点/V2ray订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-17-today-vless-node.htm" title="顶级代理服务器 - 10月17日18.6M/S|免费Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点订阅机场推荐">顶级代理服务器 - 10月17日18.6M/S|免费Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-28-vless-node-share.htm" title="顶级代理服务器 - 9月28日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐">顶级代理服务器 - 9月28日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-154417.htm" title="安卓V2Ray详细配置指南：开启自由网络之旅">安卓V2Ray详细配置指南：开启自由网络之旅</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-24-today-vless-node.htm" title="顶级代理服务器 - 9月24日22.7M/S|免费SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 9月24日22.7M/S|免费SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点订阅机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-11-vless-node-github.htm" title="顶级代理服务器 - 10月11日22M/S|免费Singbox节点/V2ray节点/SSR节点/Shadowrocket节点/Clash节点订阅机场推荐">顶级代理服务器 - 10月11日22M/S|免费Singbox节点/V2ray节点/SSR节点/Shadowrocket节点/Clash节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-19-free-subscribe-node.htm" title="顶级代理服务器 - 9月19日18.1M/S|免费Clash节点/SSR/Shadowrocket节点/V2ray订阅机场推荐">顶级代理服务器 - 9月19日18.1M/S|免费Clash节点/SSR/Shadowrocket节点/V2ray订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-9-today-vless-node.htm" title="顶级代理服务器 - 10月9日20.3M/S|免费SSR节点/Shadowrocket节点/V2ray节点/Singbox节点/Clash节点订阅机场推荐">顶级代理服务器 - 10月9日20.3M/S|免费SSR节点/Shadowrocket节点/V2ray节点/Singbox节点/Clash节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-14-free-subscribe-node.htm" title="顶级代理服务器 - 10月14日22.5M/S|免费Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/SSR节点订阅机场推荐">顶级代理服务器 - 10月14日22.5M/S|免费Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/SSR节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-7-today-vless-node.htm" title="顶级代理服务器 - 10月7日18.9M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点订阅机场推荐">顶级代理服务器 - 10月7日18.9M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-16-free-subscribe-node.htm" title="顶级代理服务器 - 10月16日20.3M/S|免费SSR节点/V2ray节点/Clash节点/Shadowrocket节点/Singbox节点订阅机场推荐">顶级代理服务器 - 10月16日20.3M/S|免费SSR节点/V2ray节点/Clash节点/Shadowrocket节点/Singbox节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-14-vless-node-share.htm" title="顶级代理服务器 - 9月14日22M/S|免费Shadowrocket节点/SSR/Clash节点/V2ray订阅机场推荐">顶级代理服务器 - 9月14日22M/S|免费Shadowrocket节点/SSR/Clash节点/V2ray订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-155151.htm" title="破解网络屏障：谷歌科学上网的全方位指南">破解网络屏障：谷歌科学上网的全方位指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-15-node-share.htm" title="顶级代理服务器 - 10月15日22.4M/S|免费Shadowrocket节点/Singbox节点/SSR节点/V2ray节点/Clash节点订阅机场推荐">顶级代理服务器 - 10月15日22.4M/S|免费Shadowrocket节点/Singbox节点/SSR节点/V2ray节点/Clash节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-23-vless-node-share.htm" title="顶级代理服务器 - 9月23日22.7M/S|免费Shadowrocket节点/SSR/V2ray节点/Clash订阅机场推荐">顶级代理服务器 - 9月23日22.7M/S|免费Shadowrocket节点/SSR/V2ray节点/Clash订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-28-vless-node-share.htm" title="顶级代理服务器 - 9月28日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐">顶级代理服务器 - 9月28日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-153703.htm" title="手机Clash免费节点获取与高效使用全攻略：解锁全球网络自由">手机Clash免费节点获取与高效使用全攻略：解锁全球网络自由</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-24-today-vless-node.htm" title="顶级代理服务器 - 10月24日21M/S|免费SSR节点/Singbox节点/Clash节点/V2ray节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 10月24日21M/S|免费SSR节点/Singbox节点/Clash节点/V2ray节点/Shadowrocket节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-20-vless-windows.htm" title="顶级代理服务器 - 10月20日19.5M/S|免费Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点订阅机场推荐">顶级代理服务器 - 10月20日19.5M/S|免费Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点订阅机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -286,7 +286,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
